Issue #93 : fix scroll overflow iOS

--- a/src/global.scss
+++ b/src/global.scss
@@ -200,8 +200,7 @@ video {
   flex-grow: 1;
   background: #fff;
   border-radius: 8px;
-  overflow: hidden;
-  filter: drop-shadow(0 4px 16px rgba(0, 0, 0, 0.12));
+  filter: drop-shadow(0 4px 10px rgba(0, 0, 0, 0.12));
 
   .custom-card-content, .custom-card-footer {
     padding: 0 1em;
